SVVNNI-288: fix shard test selectors to be non-null